[package]
name = "winka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.9", default-features = false, features = ["rwh_05", "serde"] }
glutin = { version = "0.31.2" }
glutin-winit = "0.4.2"
raw-window-handle = "0.5.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.0"
